Fix route user/password
